--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,9 @@
     <title>Storybooks</title>
 </head>
 <body>
-    {{{body}}}
+    <section class="container">
+        {{{body}}}
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
