insert header partial into main layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,7 @@
     <title>Storybooks</title>
 </head>
 <body>
+    {{> _header}}
     <section class="container">
         {{{body}}}
     </section>
