--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,5 +19,10 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    {{!-- initialize materialize sidenav --}}
+    <script>
+        M.Sidenav.init(document.querySelector('.sidenav'));
+    </script>
 </body>
 </html>
