--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,6 +24,7 @@
     {{!-- initialize materialize sidenav --}}
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'));
+        M.FormSelect.init(document.querySelector('#status'));
     </script>
 </body>
 </html>
