--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,11 +20,19 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.22.1/ckeditor.js" integrity="sha512-F8fV4+wpHYl9zul08Soff9H9fCx6OMIFfgbQcy+2v2gV7PdbT0OgM1LFwujQmwlLGWWKNbOFZ13uWP+Cbe0Ngw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    {{!-- initialize materialize sidenav --}}
+    
     <script>
+        {{!-- Materialize initializations --}}
         M.Sidenav.init(document.querySelector('.sidenav'));
         M.FormSelect.init(document.querySelector('#status'));
+
+        {{!-- Replace textarea with name='body' with ckeditor --}}
+        CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea, toolbar, basicstyles, link'
+        });
+        
     </script>
 </body>
 </html>
