--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="input-field">
                 <h5>Share Your Story:</h5>
-                <textarea id="body" name="body"></textarea>
+                <textarea id="story-body-editor" name="body"></textarea>
             </div>
         </div>
 
