use middleware to set global user var (allows logged in user to be checked against stories users in dashboard etc.)

--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -4,7 +4,8 @@
         <div class="col s12 m4">
             <section class="card">
                 <div class="card-image">
-                    {{editIcon user ../user _id}}
+                    {{!-- Triple curly braces cause otherwise shows html rather than rendered text --}}
+                    {{{editIcon user ../user _id}}}
                 </div>
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
