add search bar with fetch request handled by client-side js

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,5 +24,6 @@
 
     <script src="/js/initializeMaterializeComponents.js"></script>
     <script src="/js/useCKEDITOR.js"></script>
+    <script src="/js/searchByTitle.js"></script>
 </body>
 </html>
